@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          MakeMaker has been refactored to make it easier to subclass
+          (Thanks, Christopher J. Madsen!)
 
 4.300008  2012-02-16 17:28:34 America/New_York
           work around qr//m bug in 5.8.8 and earlier (thanks, Randy Stauner!)
